--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -16,6 +16,6 @@ jobs:
         with:
           python-version: "3.10"
 
-      - run: python fuzzer.py
+      - run: python fuzz.py
         shell: bash
         
