--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -15,7 +15,10 @@ jobs:
       - uses: actions/setup-python@v4.2.0
         with:
           python-version: "3.10"
-
+          
+      - run: pip install -r requirements.txt
+        shell: bash
+        
       - run: python fuzz.py
         shell: bash
         
